--- a/package.json
+++ b/package.json
@@ -15,5 +15,15 @@
   "bugs": {
     "url": "https://github.com/1312415/lab01-1312415-1312420/issues"
   },
-  "homepage": "https://github.com/1312415/lab01-1312415-1312420#readme"
+  "homepage": "https://github.com/1312415/lab01-1312415-1312420#readme",
+  "dependencies": {
+    "body-parser": "^1.17.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.15.2",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.2",
+    "mongoose": "^4.9.2",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
+  }
 }
