--- a/package.json
+++ b/package.json
@@ -18,16 +18,21 @@
   "homepage": "https://github.com/1312415/lab01-1312415-1312420#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "cloudinary": "^1.8.0",
+    "connect-multiparty": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.1",
     "crypto-js": "^3.1.9-1",
     "express": "^4.15.2",
+    "express-fileupload": "^0.1.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.2",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.9.2",
     "mongoose-unique-validator": "^1.0.5",
+    "multer": "^1.3.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "validator": "^7.0.0"
